# sequential-nueral-network

./: Makefile  README.md  pyproject.toml
snn/: __init__.py  dataset.py  features.py  plots.py
snn/modeling/: predict.py  train.py
snn/snn_utils/: layers.py  models.py  optimizers.py  settings.py
tests/: test_dense.py
