[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "snn"
version = "0.0.1"
description = "Implementation of a sequential neural network from scratch in Python. Includes training and evaluation scripts for experimenting with different architectures."
authors = [
  { name = "Tyrike Daniels" },
]

[tool.pytest.ini_options]
pythonpath = ["."]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["snn"]
include = ["pyproject.toml", "snn/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["snn"]
force-sort-within-sections = true

